test/cases/errors/loader-error-warning/warnings.js
module.exports = [
	[
		/xyz/,
		/Emitted value instead of an instance of Error/,
		/warning-loader\.js/
	]
];
